--- a/index.html
+++ b/index.html
@@ -9,21 +9,28 @@
 
         <link rel="shortcut icon" href="img/favicon.ico">
 
-		<link href="css/bootstrap.min.css" rel="stylesheet"/>
-		<link href="css/bootstrap-theme.min.css" rel="stylesheet"/>
+		<link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
+		<link href="assets/css/bootstrap-theme.min.css" rel="stylesheet"/>
+		<link href="assets/css/custom.css" rel="stylesheet"/>
 	</head>
 	<body>
 
+		<div ui-view="main"></div>
 
 		<!-- third part -->
-		<script src="js/lib/angular.min.js"></script>
-		<script src="js/lib/angular-animate.min.js"></script>
-		<script src="js/lib/ui-bootstrap.min.js"></script>
-		<script src="js/lib/angular-ui-router.min.js"></script>
+		<script src="assets/libs/angular.min.js"></script>
+		<script src="assets/libs/angular-animate.min.js"></script>
+		<script src="assets/libs/ui-bootstrap.min.js"></script>
+		<script src="assets/libs/angular-ui-router.min.js"></script>
 
 		<!-- internal -->
-		<script src="js/questionary-user-app.js"></script>
-		<script src="js/questionary-user-config.js"></script>
+		<script src="app/questionary.module.js"></script>
+		<script src="app/questionary.routes.js"></script>
+
+		<script src="app/shared/services/userService.js"></script>
+
+		<script src="app/components/login/loginController.js"></script>
+		<script src="app/components/login/loginService.js"></script>
 
 	</body>
 </html>
