controle de transição logado/não logado

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<div ui-view="main"></div>
 
-		<!-- third part -->
+		<!-- third party -->
 		<script src="assets/libs/angular.min.js"></script>
 		<script src="assets/libs/angular-animate.min.js"></script>
 		<script src="assets/libs/ui-bootstrap.min.js"></script>
