--- a/index.html
+++ b/index.html
@@ -32,5 +32,14 @@
 		<script src="app/components/login/loginController.js"></script>
 		<script src="app/components/login/loginService.js"></script>
 
+		<script src="app/components/dashboard/dashboardController.js"></script>
+		<script src="app/components/dashboard/dashboardService.js"></script>
+
+		<script src="app/components/questionary/questionaryController.js"></script>
+		<script src="app/components/questionary/questionaryService.js"></script>
+
+		<script src="app/components/result/resultController.js"></script>
+		<script src="app/components/result/resultService.js"></script>
+
 	</body>
 </html>
