--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
 		<link href="assets/css/bootstrap-theme.min.css" rel="stylesheet"/>
 		<link href="assets/css/custom.css" rel="stylesheet"/>
+		<title>Simulados!</title>
 	</head>
 	<body>
 
@@ -27,7 +28,10 @@
 		<script src="app/questionary.module.js"></script>
 		<script src="app/questionary.routes.js"></script>
 
+		<script src="app/filters/secondsToMinuteSecondsFilter.js"></script>
 		<script src="app/shared/services/userService.js"></script>
+		<script src="app/shared/modal/modalController.js"></script>
+		<script src="app/shared/logged/loggedHeaderController.js"></script>
 
 		<script src="app/components/login/loginController.js"></script>
 		<script src="app/components/login/loginService.js"></script>
